results/SVCOMP/specgen/log-instanceof3-2024_02_27_16_18_51.txt
class Main {
  //@ ensures \result ==> args instanceof Object[];
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
  //@ ensures \result ==> args instanceof Object[];
                          ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:4: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
2 errors

class Main {
  //@ ensures \result ==> obj instanceof Object[];
  public static boolean f(Object obj) {
    return obj instanceof Object[];
  }
}

